--- a/hw1-programming-basics.Rmd
+++ b/hw1-programming-basics.Rmd
@@ -3,6 +3,11 @@ title: "Homework 1"
 output: html_document
 ---
 
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+rm(list=objects()) # start with a clean workspace
+source("knitr_tweaks.R")
+```
+
 # Programming Basics
 
 <!--
