--- a/hw6-data-analysis.Rmd
+++ b/hw6-data-analysis.Rmd
@@ -3,4 +3,9 @@ title: "Homework 6"
 output: html_document
 ---
 
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+rm(list=objects()) # start with a clean workspace
+source("knitr_tweaks.R")
+```
+
 # Data Analysis
