--- a/hw3-loops-strings.Rmd
+++ b/hw3-loops-strings.Rmd
@@ -3,4 +3,9 @@ title: "Homework 3"
 output: html_document
 ---
 
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+rm(list=objects()) # start with a clean workspace
+source("knitr_tweaks.R")
+```
+
 # Loops
