--- a/hw5-matrices.Rmd
+++ b/hw5-matrices.Rmd
@@ -3,4 +3,9 @@ title: "Homework 5"
 output: html_document
 ---
 
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+rm(list=objects()) # start with a clean workspace
+source("knitr_tweaks.R")
+```
+
 # Matrices
