--- a/resources.Rmd
+++ b/resources.Rmd
@@ -3,11 +3,9 @@ title: "Resources"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-library(knitr)
-library(here)
-knitr::opts_chunk$set(echo = TRUE)
-options(knitr.kable.NA = '')
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+rm(list=objects()) # start with a clean workspace
+source("knitr_tweaks.R")
 ```
 
 ---
