--- a/L1.3-programming-basics.Rmd
+++ b/L1.3-programming-basics.Rmd
@@ -19,11 +19,13 @@ source("knitr_tweaks.R")
 
 # Functions
 
-You can do a lot with the basic operators like `+`, `-`, and `*`, but to do more advanced calculations you're going to need to start using functions.^[Technically speaking, operators are functions in R: the addition operator `+` is a convenient way of calling the addition function `‘+‘()`. Thus `10+20` is equivalent to the function call `‘+‘(20, 30)`. Not surprisingly, no-one ever uses this version.] Watch this 2 min video for a quick summary of basic R functions:
+You can do a lot with the basic operators like `+`, `-`, and `*`, but to do more advanced calculations you're going to need to start using functions.^[Technically speaking, operators are functions in R: the addition operator `+` is a convenient way of calling the addition function `‘+‘()`. Thus `10+20` is equivalent to the function call `‘+‘(20, 30)`. Not surprisingly, no-one ever uses this version.]
 
-![](https://vimeo.com/220490105)
+> [Watch this 1-minute video for a quick summary of **functions**](https://vimeo.com/220490105){target="_blank"}
 
-R has a lot of very useful built-in functions. Suppose I wanted to take the square root of `225`. The usual notation for this is $\sqrt{25}=5$, though sometimes you'll also see it written like this $25^{0.5} = 5$. This second way of writing it is kind of useful to “remind” you of the mathematical fact that “square root of $x$” is actually the same as “raising $x$ to the power of 0.5”. And since we already know how to raise things to powers in R, we could do this:
+
+R has a lot of very useful built-in functions. Suppose I wanted to take the square root of 225. The usual notation for this is $\sqrt{25}=5$, though sometimes you'll also see it written like this $25^{0.5} = 5$. This second way of writing it is kind of useful to "remind" you of the mathematical fact that "square root of $x$" is actually the same as "raising $x$ to the power of 0.5". And since we already know how to raise things to powers in R, we could do this:
+
 ```{r}
 225 ^ 0.5
 ```
@@ -34,29 +36,16 @@ However, we could also compute this using R's built-in square root function `sqr
 sqrt(225)
 ```
 
-Some commonly used functions for individual numbers include:
+## Some common functions
 
-Function      | Description
-------------- | -----------
-`exp()`       | Exponential
-`sqrt()`      | Square root
-`log(x)`      | Log base e of `x` ("natural log")
-`factorial()` | Factorial
-`round(x, digits=0)` | Round `x` to the `digits` decimal place
-`abs(x)`  | Absolute value of `x`
-
-Some commonly used functions for vectors of values include:
-
-Function      | Description
-------------- | -----------
-`mean(x)`     | Mean of values in `x`
-`median(x)`   | Median of values in `x`
-`max(x)`      | Max element in `x`
-`min(x)`      | Min element in `x`
-`sum(x)`      | Sums the elements in `x`
-`prod(x)`     | Product of the elements in `x`
-`seq(a, b, c)` | Creates a sequence of numbers from `a` to `b` with step size of `c`
-`rep(a, b)`    | Creates a vector with `a` repeated `b` times
+Function   | Description  | Example Input | Example Output
+---------- | ----------------------------|---------------|----------------
+`exp()`    | Exponential  | `exp(0)` | ``r exp(0)``
+`sqrt()`   | Square root  | `sqrt(64)` | ``r sqrt(64)``
+`log(x)`   | Log base e of `x` ("natural log") | `log(1)` | ``r log(1)``
+`factorial()` | Factorial | `factorial(5)` | ``r factorial(5)``
+`round(x, digits=0)` | Round `x` to the `digits` decimal place | `round(3.1415, digits=2)` | ``r round(3.1415, digits=2)``
+`abs(x)`  | Absolute value of `x` | `abs(-42)` | ``r abs(-42)``
 
 ## Combining functions
 
@@ -66,57 +55,48 @@ In the same way that R allows us to put multiple operations together into a long
 sqrt(1 + abs(-8))
 ```
 
-When R executes this command, starts out by calculating the value of `abs(-8)`, which produces an intermediate value of `8`. Having done so, the command simplifies to `sqrt(1 + 8)`. To solve the square root^[A note for the mathematically inclined: R does support complex numbers, but unless you explicitly specify that you want them it assumes all calculations must be real valued. By default, the square root of a negative number is treated as undefined: `sqrt(-9)` will produce `NaN` (not a number) as its output. To get complex numbers, you would type `sqrt(-9+0i)` and R would now return `0+3i`.] it first needs to add `1 + 8` to get `9`, at which point it evaluates `sqrt(9)`, and so it finally outputs a value of `3`.
+When R executes this command, starts out by calculating the value of `abs(-8)`, which produces an intermediate value of `8`. The command then simplifies to `sqrt(1 + 8)`. To solve the square root^[R does support complex numbers, but unless you explicitly specify that you want them it assumes all calculations must be real valued. By default, the square root of a negative number is treated as undefined: `sqrt(-9)` will produce `NaN` (not a number) as its output. To get complex numbers, you would type `sqrt(-9+0i)` and R would now return `0+3i`.] it first needs to add `1 + 8` to get `9`, at which point it evaluates `sqrt(9)`, and so it finally outputs a value of `3`.
 
 ---
 
 # Arguments
 
-![](https://vimeo.com/220490157)
-
 When we use a function to do something, we generally refer to this as **calling** the function. The values that we type into the function are referred to as the **arguments** of that function. Some functions can have more than one argument.
+
+> [Watch this 1-minute video for a quick summary of **arguments**](https://vimeo.com/220490157){target="_blank"}
+
 
 ## Multiple arguments
 
-There's two more fairly important things that you need to understand about how functions work in R, and that's the use of “named” arguments, and default values” for arguments. To understand what these two concepts are all about, I'll introduce another function. The `round` function can be used to round some value to the nearest whole number. For example, I could type this:
+Some functions have more than one argument. For example, the `round()` function can be used to round some value to the nearest whole number. For example, I could type this:
 
 ```{r}
 round(3.1415)
 ```
 
-Pretty straightforward. However, suppose I only wanted to round it to two decimal places: that is, I want to get `3.14` as the output. The `round` function supports this, by allowing you to input a second argument to the function that specifies the number of decimal places that you want to round the number to. In other words, I could do this:
+Pretty straightforward. However, suppose I only wanted to round it to two decimal places: that is, I want to get `3.14` as the output. To do this, you can input a second argument that specifies the number of decimal places that you want to round the number to. To get `3.14`, I would type this:
 
 ```{r}
 round(3.14165, 2)
 ```
-
-What's happening here is that I've specified two arguments: the first argument is the number that needs to be rounded (i.e., `3.1415`), the second argument is the number of decimal places that it should be rounded to (i.e., `2`), and the two arguments are separated by a comma.
 
 ## Argument names
 
-In this simple example, it's not too hard to remember which argument comes first and which one comes second, but as you might imagine it starts to get very difficult once you start using complicated functions that have lots of arguments. Fortunately, most R functions use **argument names** to make your life a little easier. For the `round` function, for example, the number that needs to be rounded is specified using the `x` argument, and the number of decimal points that you want it rounded to is specified using the `digits` argument:
+In this simple example, it's not too hard to remember which argument comes first and which one comes second, but it starts to get very difficult once you start using complicated functions that have lots of arguments. Fortunately, most R functions use **argument names** to make your life a little easier. For the `round()` function, for example, the number that needs to be rounded is specified using the `x` argument, and the number of decimal points that you want it rounded to is specified using the `digits` argument:
 
 ```{r}
 round(x = 3.1415, digits = 2)
-```
-
-Notice that this is kind of similar in spirit to variable assignment, except that I used `=` here, rather than `<-`. In both cases we're specifying specific values to be associated with a label. However, there are some differences between what I was doing earlier on when creating variables, and what I'm doing here when specifying arguments, and so as a consequence it's important that you use `=` in this context.
-
-As you can see, specifying the arguments by name involves a lot more typing, but it's also a lot easier to read. Because of this, the commands in this book will usually specify arguments by name,^[The two functions discussed previously, `sqrt` and `abs`, both only have a single argument, `x`. So I could have typed something like `sqrt(x = 225)` or `abs(x = -13)` earlier. The fact that all these functions use `x` as the name of the argument that corresponds the “main” variable that you're working with is not entirely a coincidence. That's a fairly widely used convention. Quite often, the writers of R functions will try to use conventional names like this to make your life easier. Or at least that's the theory. In practice... it doesn't always work as well as you'd hope.] since that makes it clearer to you what I'm doing. However, one important thing to note is that when specifying the arguments using their names, it doesn't matter what order you type them in. But if you don't use the argument names, then you have to input the arguments in the correct order. In other words, these three commands all produce the same output...
-
-```{r,results='hold'}
-round(3.14165, 2)
-round(x = 3.1415, digits = 2)
-round(digits = 2, x = 3.1415)
-```
-but this one does not...
-```{r}
-round(2, 3.14165)
 ```
 
 ## Default values
 
-Okay, so that's the first thing I said you'd need to know: argument names. The second thing you need to know about is default values. Notice that the first time I called the `round` function I didn't actually specify the `digits` argument at all, and yet R somehow knew that this meant it should round to the nearest whole number. How did that happen? The answer is that the `digits` argument has a **default value** of `0`, meaning that if you decide not to specify a value for `digits` then R will act as if you had typed `digits = 0`. This is quite handy: most of the time when you want to round a number you want to round it to the nearest *whole* number, and it would be pretty annoying to have to specify the `digits` argument every single time. On the other hand, sometimes you actually do want to round to something other than the nearest whole number, and it would be even more annoying if R didn't allow this! Thus, by having `digits = 0` as the default value, we get the best of both worlds.
+Notice that the first time I called the `round()` function I didn't actually specify the `digits` argument at all, and yet R somehow knew that this meant it should round to the nearest whole number. How did that happen? The answer is that the `digits` argument has a **default value** of `0`, meaning that if you decide not to specify a value for `digits` then R will act as if you had typed `digits = 0`. This is quite handy: most of the time when you want to round a number you want to round it to the nearest *whole* number, and it would be pretty annoying to have to specify the `digits` argument every single time. On the other hand, sometimes you actually do want to round to something other than the nearest whole number, and it would be even more annoying if R didn't allow this! Thus, by having `digits = 0` as the default value, we get the best of both worlds.
+
+Finally, not all functions have (or require) arguments:
+
+```{r}
+date()
+```
 
 ---
 
@@ -128,13 +108,14 @@ In R, all "assignments" have this form:
 objectName <- value
 ```
 
-where the arrow, `<-`, means "assign `value` to `objectName`". Watch this 2 min video for a quick summary:
+where the arrow, `<-`, means "assign `value` to `objectName`".
 
-![](https://vimeo.com/220493412)
+> [Watch this 1-minute video for a quick summary of **objects**](https://vimeo.com/220493412){target="_blank"}
 
-The operator `<-` is a pain to type, so RStudio has a keyboard shortcut: Alt + - (the minus sign). RStudio offers many handy [keyboard shortcuts](https://support.rstudio.com/hc/en-us/articles/200711853-Keyboard-Shortcuts). Also, Alt+Shift+K brings up a keyboard shortcut reference card.
 
-You can choose almost any name you like for an object, as long as the name does not begin with a *number* or a special character like `+`, `-`, `*`, `/`, `^`, `!`, `@`, or `&`. For example, try assigning `2` to `x`:
+The operator `<-` is a pain to type, so RStudio has a keyboard shortcut: Alt + - (the minus sign). RStudio offers many other handy [keyboard shortcuts](https://support.rstudio.com/hc/en-us/articles/200711853-Keyboard-Shortcuts). Also, Alt+Shift+K brings up a keyboard shortcut reference card.
+
+To practice, try assigning `2` to `x`:
 
 ```{r}
 x <- 2
@@ -143,86 +124,122 @@ x <- 2
 Now type `x` again - notice that it returns the value assigned to it!
 
 ```{r}
-x <- 2
+x
 ```
 
+If you overwrite an object with a different value, R will "forget" the previous assigned value and only keep the new assignment:
 
+```{r}
+x
+x <- 42
+x
+```
 
+**A note on formatting**: Always surround `<-` with spaces! Otherwise your code can be confusing. For example, if you typed `x<-2` (no spaces), it's not clear if you meant `x <- 2` or `x < -2`. The first one assigns `2` to `x`, but the second one compares whether `x` is less than `-2`.
 
+## Object names
 
-Notice that RStudio automagically surrounds `<-` with spaces, which demonstrates a useful code formatting practice. Code is miserable to read on a good day. Give your eyes a break and use spaces.
-
-
-
-Object names cannot start with a digit and cannot contain certain other characters such as a comma or a space. You will be wise to adopt a [convention for demarcating words](http://en.wikipedia.org/wiki/Snake_case) in names.
+You can choose almost any name you like for an object, as long as the name does not begin with a *number* or a special character like `+`, `-`, `*`, `/`, `^`, `!`, `@`, or `&`. You will be wise to adopt a [convention for demarcating words](http://en.wikipedia.org/wiki/Snake_case) in names. Here are a few:
 
 ```
-i_use_snake_case
+snake_case_is_one_choice
 other.people.use.periods
-evenOthersUseCamelCase
+camelCaseIsAlsoGood
 ```
 
-Make another assignment
+Make another assignment:
+
 ```{r}
 this_is_a_really_long_name <- 2.5
 ```
 
+To inspect this, try out RStudio's completion facility: type the first few characters, press TAB - voila! RStudio auto-completes the long name for you :)
 
+**R is case sensitive**. To understand what this means, try this:
 
-
-
-
-
-
-## Saving your workspace with a .RData file
-
-Upon quitting R, you have to decide if you want to save your workspace, for potential restoration the next time you launch R. RStudio will prompt you to make this decision.
-
-Quit R/Rstudio, either from the menu, using a keyboard shortcut, or by typing `q()` in the Console. You'll get a prompt like this:
-
-> Save workspace image to ~/.Rdata?
-
-_Note where the workspace image is to be saved_ and then click `Save`.
-
-Using your favorite method, visit the directory where image was saved and verify there is a file named `.RData`. You will also see a file `.Rhistory`, holding the commands submitted in your recent session.
-
-Restart RStudio. In the Console you will see a line like this:
-
-```
-[Workspace loaded from ~/.RData]
+```{r}
+cases_matter <- 2^2
+Cases_matter <- 2^3
 ```
 
-indicating that your workspace has been restored. Look in the Workspace pane and you'll see the same objects as before. In the History tab of the same pane, you should also see your command history. You're back in business. This way of starting and stopping analytical work will not serve you well for long but it's a start.
+Let's try to inspect:
 
+```{r}
+cases_matter
+Cases_matter
+```
 
+Although the two objects look similar, one has a capital "C", and R stores that as a different object.
 
+In general, type carefully. Typos matter. Case matters. **Get better at typing**.
 
+## The workspace
 
+Look at your workspace in the upper right pane. The workspace is where user-defined objects accumulate. You can also get a listing of these objects with commands:
 
+```{r}
+objects()
+ls()
+```
+
+If you want to remove the object named `x`, you can do this
+
+```{r}
+rm(x)
+```
+
+To remove everything, use this:
+
+```{r}
+rm(list = ls())
+```
+
+or click the broom in RStudio's Environment pane.
 
 ---
 
 # Vectors
 
-![](https://vimeo.com/220490316)
+
+
+
+> [Watch this 1-minute video for a quick summary of **vectors**](https://vimeo.com/220490316){target="_blank"}
+
+
+
+## Some common functions with vectors
+
+Function   | Description  | Example Input | Example Output
+---------- | ----------------------------|---------------|----------------
+`mean(x)`     | Mean of values in `x` | `mean(c(1,2,3,4,5))` | ``r mean(c(1,2,3,4,5))``
+`median(x)`   | Median of values in `x` | `median(c(1,2,2,4,5))` | ``r median(c(1,2,2,4,5))``
+`max(x)`      | Max element in `x` | `max(c(1,2,3,4,5))` | ``r max(c(1,2,3,4,5))``
+`min(x)`      | Min element in `x` | `min(c(1,2,3,4,5))` | ``r min(c(1,2,3,4,5))``
+`sum(x)`      | Sums the elements in `x` | `sum(c(1,2,3,4,5))` | ``r sum(c(1,2,3,4,5))``
+`prod(x)`     | Product of the elements in `x` | `prod(c(1,2,3,4,5))` | ``r prod(c(1,2,3,4,5))``
+`seq(a, b, c)` | Creates a sequence of numbers from `a` to `b` with step size of `c` | `seq(1, 5, 1)` | ``r seq(1, 5, 1)``
+`rep(a, b)`    | Creates a vector with `a` repeated `b` times | `rep(1, 5)` | ``r rep(1, 5)``
 
 ---
 
 # Types
 
-![](https://vimeo.com/220490241)
+> [Watch this 1-minute video for a quick summary of **types**](https://vimeo.com/220490241){target="_blank"}
+
 
 ---
 
 # Lists
 
-![](https://vimeo.com/220490360)
+> [Watch this 1-minute video for a quick summary of **lists**](https://vimeo.com/220490360){target="_blank"}
+
 
 ---
 
 # Packages
 
-![](https://vimeo.com/220490447)
+> [Watch this 1-minute video for a quick summary of **packages**](https://vimeo.com/220490447){target="_blank"}
+
 
 
 
@@ -341,3 +358,4 @@ ozone$rad
 ozone$temp
 ```
 
+# Footnotes
