--- a/L1.2-getting-started.Rmd
+++ b/L1.2-getting-started.Rmd
@@ -9,8 +9,10 @@ source("knitr_tweaks.R")
 ```
 
 <!-- Content for this page is sourced from:
-    - Danielle Navarro's website "R for Psychological Science": https://psyr.org/getting-started.html
-    - Jenny Bryan's STAT 545 Course: http://stat545.com/block002_hello-r-workspace-wd-project.html
+    - Danielle Navarro's website "R for Psychological Science":
+      https://psyr.org/getting-started.html
+    - Jenny Bryan's STAT 545 Course:
+      http://stat545.com/block002_hello-r-workspace-wd-project.html
 -->
 
 ---
@@ -148,7 +150,7 @@ or this
 
 and get exactly the same answer.
 
-## Using comments 
+## Using comments
 
 In R, the `#` symbol is a special symbol that denotes a comment. R will ignore anything on the same line that follows the `#` symbol. This enables us to write comments around our code to explain what we're doing:
 
@@ -156,7 +158,7 @@ In R, the `#` symbol is a special symbol that denotes a comment. R will ignore a
 2 + 2 # This is a comment explaining that I'm adding two numbers
 ```
 
-Notice that R ignores the whole sentence after the `#` symbol. 
+Notice that R ignores the whole sentence after the `#` symbol.
 
 ---
 
@@ -174,7 +176,7 @@ If you double click on one of the commands, it will be copied to the R console.
 
 ## Working directory
 
-Any process running on your computer has a notion of its "working directory". In R, this is where R will look for files you ask it to load. It's also where any files you write to disk will go. 
+Any process running on your computer has a notion of its "working directory". In R, this is where R will look for files you ask it to load. It's also where any files you write to disk will go.
 
 You can explicitly check your working directory with:
 
@@ -192,9 +194,9 @@ __Although I do not recommend it__, in case you're curious, you can set R's work
 setwd("~/myCoolProject")
 ```
 
-__Although I do not recommend it__, you can also use RStudio's Files pane to navigate to a directory and then set it as working directory from the menu: 
+__Although I do not recommend it__, you can also use RStudio's Files pane to navigate to a directory and then set it as working directory from the menu:
 
-> Session > Set Working Directory > To Files Pane Location. 
+> Session > Set Working Directory > To Files Pane Location.
 
 You'll see even more options there). Or within the Files pane, choose __More__ and __Set As Working Directory__.
 
@@ -206,15 +208,15 @@ Keeping all the files associated with a project organized together -- input data
 
 [Using Projects](https://support.rstudio.com/hc/en-us/articles/200526207-Using-Projects)
 
-Let's make one for practice. Do this: 
+Let's make one for practice. Do this:
 
-> File > New Project .... 
+> File > New Project ....
 
 You should see the following pane:
 
 ![](images/rstudio_new_project.png){ width=400 }
 
-Choose "New Directory". The directory name you choose here will be the project name. Call it whatever you want. RStudio will create a folder with that name to put all your project files. 
+Choose "New Directory". The directory name you choose here will be the project name. Call it whatever you want. RStudio will create a folder with that name to put all your project files.
 
 As a demo, I created a project on my Desktop called "demo". RStudio created a new project called "demo", and in this folder there is a file called "demo.Rproj". If I double-click on this file, RStudio will open up, and my working directory will be automatically set to this folder! You can double check this by typing:
 
