--- a/about.Rmd
+++ b/about.Rmd
@@ -6,6 +6,6 @@ output:
     toc: no
 ---
 
-This course was inspired by many other courses / resources that cover similar material. A full list of sources from which content was either directly reused or served as the inspiration for content in this course can be found in the [license](LICENSE.html) page.
+This course was inspired by many other courses / resources that cover similar material. In addition to my own developed material, I have also modified material from other courses and workshops - a full list of sources can be found in the [LICENSE](LICENSE.html) page.
 
 This course was originally created by Dr. John Paul Helveston at the George Washington University for the Fall 2019 semester of EMSE 6574.
