--- a/syllabus_emse6574.Rmd
+++ b/syllabus_emse6574.Rmd
@@ -9,9 +9,9 @@ documentclass: article
 
 ---
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_tweaks.R")
+source("knitr_settings.R")
 ```
 
 ```{r child = here::here('syllabus', 'main.Rmd')}
