--- a/L1.3-programming-basics.Rmd
+++ b/L1.3-programming-basics.Rmd
@@ -3,20 +3,12 @@ title: "Getting Started"
 output: html_document
 ---
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_tweaks.R")
+source("knitr_settings.R")
 ```
 
-<!-- Content for this page is sourced from:
-    - Danielle Navarro's website "R for Psychological Science":
-      https://psyr.org/getting-started.html
-    - Jenny Bryan's STAT 545 Course:
-      http://stat545.com/block002_hello-r-workspace-wd-project.html
-    - RStudio primers: https://rstudio.cloud/learn/primers/1.2
-    - Xiao Ping Song's Intro2R crash course:
-      https://github.com/xp-song/Intro2R
--->
+[Note: Some content in this page is sourced from other courses - citations are in the footnotes]^[Soome content in this page is sourced from: 1) Danielle Navarro's website ["R for Psychological Science"](https://psyr.org/index.html); 2) Jenny Bryan's [STAT 545 Course](http://stat545.com/); 3) [RStudio primers](https://rstudio.cloud/learn/primers/1.2); 4) Xiao Ping Song's [Intro2R crash course](https://github.com/xp-song/Intro2R)]
 
 ---
 
@@ -355,5 +347,7 @@ When loading a package in an R session, you don't have to use quotes (but you ca
 library("packagename") # This works
 library(packagename)   # This also works
 ```
+
+---
 
 **Footnotes**
