--- a/L11.1-data-frames.Rmd
+++ b/L11.1-data-frames.Rmd
@@ -3,8 +3,9 @@ title: "Data Frames"
 output: html_document
 ---
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+<!-- ```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_tweaks.R")
-```
+source("knitr_settings.R")
+``` -->
 
+---
