--- a/P11-monte-carlo-methods.Rmd
+++ b/P11-monte-carlo-methods.Rmd
@@ -3,7 +3,8 @@ title: "Practice 11 - Monte Carlo Methods"
 output: html_document
 ---
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+<!-- ```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_tweaks.R")
+source("knitr_settings.R")
 ```
+ -->
