--- a/hw2-functions.Rmd
+++ b/hw2-functions.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Homework 2"
+title: "Homework 2 - Functions"
 output: html_document
 ---
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+<!-- ```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_tweaks.R")
+source("knitr_settings.R")
 ```
 
-# Functions
+ -->
