--- a/hw3-loops-strings.Rmd
+++ b/hw3-loops-strings.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Homework 3"
+title: "Homework 3 - Loops"
 output: html_document
 ---
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+<!-- ```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_tweaks.R")
+source("knitr_settings.R")
 ```
 
-# Loops
+ -->
