--- a/hw6-data-analysis.Rmd
+++ b/hw6-data-analysis.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Homework 6"
+title: "Homework 6 - Data Analysis"
 output: html_document
 ---
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+<!-- ```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_tweaks.R")
+source("knitr_settings.R")
 ```
 
-# Data Analysis
+ -->
