--- a/L1.2-getting-started.Rmd
+++ b/L1.2-getting-started.Rmd
@@ -8,7 +8,7 @@ rm(list=objects()) # start with a clean workspace
 source("knitr_settings.R")
 ```
 
-[Note: Some content in this page is sourced from other courses - citations are in the footnotes]^[Soome content in this page is sourced from: 1) Danielle Navarro's website ["R for Psychological Science"](https://psyr.org/index.html); 2) Jenny Bryan's [STAT 545 Course](http://stat545.com/)]
+[Note: Some content in this page is sourced from other courses - citations are in the footnotes]^[Some content in this page is sourced from: 1) Danielle Navarro's website ["R for Psychological Science"](https://psyr.org/index.html); 2) Jenny Bryan's [STAT 545 Course](http://stat545.com/)]
 
 ---
 
